# ngs-tools

./: .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
libs/general-writer/src/: CMakeLists.txt  Makefile  gw-dumper.cpp
ngs-vdb/src/: CMakeLists.txt  FragmentBlob.cpp  FragmentBlobIterator.cpp  Makefile  NGS-VDB.cpp  ReferenceBlob.cpp  ReferenceBlobIterator.cpp  VdbAlignment.cpp  VdbReadCollection.cpp  VdbReference.cpp
ngs-vdb/src/test/: CMakeLists.txt  Makefile  test-ngs-vdb.cpp
other-app/: CMakeLists.txt  main.cpp
sra-search/: CMakeLists.txt  Makefile  Makefile.env  NGS_VDB.c  NGS_VDB.h  main.cpp  ngs-vdb.cpp  ngs-vdb.hpp  searchblock.cpp  searchblock.hpp  sra-search.hpp  vdb-search.cpp  vdb-search.hpp
sra-search/test/: CMakeLists.txt  Makefile  runtestcase.sh  test-sra-search.cpp
sra-search/test/expected/: 1.0-h.stdout  1.1-help.stdout  2.0-no-args.stderr  2.0-no-args.stdout  2.2-missing-algorithm.stderr  2.2-missing-algorithm.stdout  2.3-bad-algorithm.stderr  2.3-bad-algorithm.stdout  5.1-run-not-nucstrstr-with-expression.stdout  6.9-imperfect-match-smith-waterman.stdout  7.0.1-threads-no-arg.stdout  7.1-threads-unsorted.stdout
sra_dnld_mgr/: .gitignore  CMakeLists.txt  build.xml
sra_dnld_mgr/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
sra_dnld_mgr/src/Bio/: BioAccessionChecker.java  BioAccessionType.java  BioDumper.java  BioDumperFactory.java  BioDumperPreview.java  BioFastaFormatter.java  BioFastqFormatter.java  BioFilter.java  BioFilterSet.java  BioMaxNFilter.java  BioRead.java  BioReadDumper.java  BioReadGroupEnumerator.java  BioReadType.java  BioReferenceEnumerator.java  BioRunDumper.java  BioSpec.java  BioStats.java  BioVerifier.java
sra_dnld_mgr/src/GUI/: ALabel.java  AccessionWindow.java  BoolSettingsPanel.java  ButtonPanel.java  DlgPanel.java  DlgWithMaxSize.java  IntInputPanel.java  IntRangePanel.java  IntSettingsPanel.java  JobButtons.java  JobDeleteEvent.java  JobFormatPanel.java  JobPanel.java  JobReadTypePanel.java  JobWindow.java  LineEndingsPanel.java  MainWindow.java  MyKeyEventListener.java  PathChooserPanel.java  PreviewWindow.java  ProgressPanel.java  ReferencePanel.java  ReferenceWindow.java  ResourceImages.java  SRA_DNLD_MGR.java  SaveCancelEventHandler.java  SaveCancelEventType.java  SaveCancelFilterEventHandler.java  SaveCancelFilterEventType.java  Save_Cancel_Filter_Panel.java  Save_Cancel_Panel.java  SettingsWindow.java  SpotGroupFilterPanel.java  StateAndProgressEvent.java  StateAndProgressNotifier.java  StateAndProgressType.java  StatusBar.java  StringReceiver.java  TextInputPanel.java  TheMenuBar.java
sra_dnld_mgr/src/HttpWrap/: HttpDnldCGIResolver.java  HttpDnldContent.java  HttpDnldRangeReader.java  HttpDnldResolved.java
sra_dnld_mgr/src/RobotScript/: RobotScript.java
sra_dnld_mgr/src/data/: CLogger.java  IniFile.java  LineEndings.java  QConnect.java  Settings.java  TimeDiff.java  to_do_list.txt
sra_dnld_mgr/src/job/: BioRunState.java  JobConsumerRunner.java  JobConsumerThread.java  JobConsumerThreadBio.java  JobConsumerThreadDnld.java  JobData.java  JobState.java  JobSubFormat.java  JobThreadData.java  ProgressListenerInterface.java  StateAndProgressEvent.java  StateAndProgressNotifier.java  StateAndProgressType.java
sra_dnld_mgr/test/: CMakeLists.txt
tools/: CMakeLists.txt  Makefile
tools/compute-coverage/: CMakeLists.txt  Makefile  compute-coverage-ngs.cpp  compute-coverage.cpp  compute_cov.pl
tools/dump_ref_fasta/: CMakeLists.txt  DumpReferenceFASTA.cpp  Makefile  dump_ref_fasta.vers.h
tools/dump_ref_fasta/test/: CMakeLists.txt  grep  runtestcase.sh
tools/fastq-load/: README.md  fastq-load.py  test.sh
tools/fastrq-dump/: CMakeLists.txt  Makefile  fastrq-dump.cpp  filter.cpp  filter.hpp  formatter.cpp  formatter.hpp  operation.cpp  operation.hpp  settings.cpp  settings.hpp
tools/general-loader/: CMakeLists.txt  Makefile  database-loader.cpp
tools/general-loader/test/: CMakeLists.txt  Makefile  makeinputs.cpp  (+3 more)
tools/ngs_sql/: build.sh  run.sh  sql.txt
tools/pileup-stats/: CMakeLists.txt  Makefile  pileup-stats.cpp
tools/pore-load/: README.md  pore-load.py
tools/ref-variation/: CMakeLists.txt  Makefile  helper.cpp  ref-variation.cpp  ref-variation.vers.h  var-expand.cpp  var-expand.vers.h
tools/skesa/: DBGraph.hpp  Integer.hpp  KmerInit.hpp  LargeInt.hpp  LargeInt1.hpp  LargeInt2.hpp  Makefile  README.skesa  assembler.hpp  blast_hits.hpp  common_util.hpp  concurrenthash.hpp  contigs.hpp  counter.hpp  dbgtester.cpp  glb_align.cpp  graphdigger.hpp  guidedassembler.cpp  guidedpath.hpp  k_aligner.cpp  kmercounter.cpp  ngs_includes.hpp  readsgetter.hpp  skesa.cpp  wgmlst.cpp  wgmlst.hpp  wgmlst_app.cpp
tools/spark_genes/: README.txt  build.sh  from_1_to_chr1.txt  run.sh
tools/sra-search/: .gdb_history  CMakeLists.txt  Makefile  NGS_VDB.h  blobmatchiterator.cpp  blobmatchiterator.hpp  fragmentmatchiterator.cpp  fragmentmatchiterator.hpp  main.cpp  matchiterator.hpp  ngs-vdb.cpp  referencematchiterator.cpp  referencematchiterator.hpp  referencespec.hpp  searchblock.cpp  searchblock.hpp  searchbuffer.hpp  sra-search.vers.h  vdb-search.cpp  vdb-search.hpp
tools/sra_dnld_mgr/: CMakeLists.txt
tools/tax/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  build.sh  deploy.sh  quickbuild.sh  readme.txt
tools/trace-loader/: CMakeLists.txt  Makefile  tl_exception.cpp  tl_exception.hpp  tl_log.hpp  tl_names.hpp  tl_owp.cpp  tl_owp.hpp  tl_ows.cpp  tl_ows.hpp  tl_report.cpp  tl_report.hpp  tl_trace_dp.cpp  tl_trace_dp.hpp  tl_trace_fwa.cpp  tl_trace_fwa.hpp  tl_traceconfig.cpp  tl_traceconfig.hpp  tl_tracedata.cpp  tl_tracedata.hpp  tl_tracedata_abi.cpp  tl_tracedata_reader.cpp  tl_tracedata_reader.hpp  tl_tracedata_scf.cpp  tl_tracedata_sff.cpp  tl_tracedata_ztr.cpp  tl_tracefields.cpp  tl_tracefields.hpp  tl_tracefields_init.cpp  tl_tracefields_init.hpp  tl_traceinfo.cpp  tl_traceinfo.hpp  tl_types.hpp  tl_util.cpp  tl_util.hpp  tl_validator.cpp  tl_validator.hpp  tl_vrules.cpp  tl_vrules.hpp  trace_loader.cpp
(+758 files in other folders)
