if (CMAKE_VERSION VERSION_LESS "3.1")
   if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS}")
   endif ()
else ()
   set (CMAKE_CXX_STANDARD 11)
endif ()

FIND_PACKAGE ( OpenMP REQUIRED )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}" )

set ( SHARED_OBJECTS src/reader.cpp )

add_executable ( aligns_to                      src/aligns_to.cpp ${SHARED_OBJECTS})
links_and_install_subdir (aligns_to tax)
add_executable ( build_index                    src/build_index.cpp ${SHARED_OBJECTS})
links_and_install_subdir (build_index tax)
add_executable ( check_index                    src/check_index.cpp ${SHARED_OBJECTS})
links_and_install_subdir (check_index tax)
add_executable ( db_fasta_to_bin                src/db_fasta_to_bin.cpp ${SHARED_OBJECTS})
links_and_install_subdir (db_fasta_to_bin tax)
add_executable ( filter_db                      src/filter_db.cpp ${SHARED_OBJECTS})
links_and_install_subdir (filter_db tax)
add_executable ( contig_builder                 src/contig_builder.cpp ${SHARED_OBJECTS})
links_and_install_subdir (contig_builder tax)
add_executable ( fasta_contamination            src/fasta_contamination.cpp ${SHARED_OBJECTS})
links_and_install_subdir (fasta_contamination tax)
add_executable ( find_closest_profile_linear    src/find_closest_profile_linear.cpp ${SHARED_OBJECTS})
links_and_install_subdir (find_closest_profile_linear tax)
add_executable ( contig_connectivity            src/contig_connectivity.cpp ${SHARED_OBJECTS})
links_and_install_subdir (contig_connectivity tax)
add_executable ( sort_dbs                       src/sort_dbs.cpp ${SHARED_OBJECTS})
links_and_install_subdir (sort_dbs tax)

include_directories ( ${CMAKE_SOURCE_DIR} )

target_link_libraries ( aligns_to ${SYS_LIBRARIES} )
target_link_libraries ( build_index ${SYS_LIBRARIES} )
target_link_libraries ( check_index ${SYS_LIBRARIES} )
target_link_libraries ( db_fasta_to_bin ${SYS_LIBRARIES} )
target_link_libraries ( filter_db ${SYS_LIBRARIES} )
target_link_libraries ( contig_builder ${SYS_LIBRARIES} )
target_link_libraries ( fasta_contamination ${SYS_LIBRARIES} )
target_link_libraries ( find_closest_profile_linear ${SYS_LIBRARIES} )
target_link_libraries ( contig_connectivity ${SYS_LIBRARIES} )
target_link_libraries ( sort_dbs ${SYS_LIBRARIES} )

if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    add_executable ( get_profile src/get_profile ${SHARED_OBJECTS})
    target_link_libraries ( get_profile ${SYS_LIBRARIES} )
    install ( TARGETS get_profile RUNTIME DESTINATION bin/tax )
endif()

add_subdirectory ( src/tests )
